--- a/workspace/work03_UI/1_html/html04_a.html
+++ b/workspace/work03_UI/1_html/html04_a.html
@@ -17,8 +17,8 @@
     <hr>
     <h3>네트워크가 연결된 상황이라면 현재 서비스되고 있는 웹페이지도 링크 가능하다.</h3>
     <div>
-        <a href="https://www.naver.com">네이버</a>
-        <a href="https://www.google.com">구글</a>
+        <a href="https://www.naver.com" target="_blank">네이버</a>
+        <a href="https://www.google.com" target="_self">구글</a>
         <a href="https://www.daum.net">다음</a>
     </div>
 </body>
