--- a/workspace/work03_UI/1_html/html04_a.html
+++ b/workspace/work03_UI/1_html/html04_a.html
@@ -10,7 +10,7 @@
     <h1>하이퍼링크 관련 태그</h1>
     <h3>a태그를 이용한 하이퍼링크 테스트</h3>
     <div>
-        <a href="html01_block_inline.html">01.블록요소, 인라인요소</a> <br>
+        <a href="html01_block_inline.html">01. 블록요소, 인라인요소</a> <br>
         <a href="html02_div_span.html">02. 영역 관련 태그</a><br>
         <a href="html03_title_paragraph.html">03. 텍스트 관련 태그</a>
     </div>
@@ -23,6 +23,6 @@
     </div>
     <hr>
     <h3>이미지에 링크를 걸 수 있다.</h3>
-    
+    <a href="http://google.com"><img src="image/google.png" width="260px" height="80px"> </a>
 </body>
 </html>
