--- a/workspace/work03_UI/1_html/html04_a.html
+++ b/workspace/work03_UI/1_html/html04_a.html
@@ -24,5 +24,34 @@
     <hr>
     <h3>이미지에 링크를 걸 수 있다.</h3>
     <a href="http://google.com"><img src="image/google.png" width="260px" height="80px"> </a>
+
+    <hr>
+    <h1>a태그 사용</h1>
+    <a href="#a">1번으로 </a>
+    <a href="#b">2번으로 </a>
+    <a href="#c">3번으로 </a>
+
+    <br><br><br><br><br>
+    <br><br><br><br><br>
+    <br><br><br><br><br>
+    <br><br><br><br><br>
+    <br><br><br><br><br>
+    <br><br><br><br><br>
+    <p id="a">1번</p>
+    <br><br><br><br><br>
+    <br><br><br><br><br>
+    <br><br><br><br><br>
+    <br><br><br><br><br>
+    <br><br><br><br><br>
+    <br><br><br><br><br>
+    <p id="b">2번</p>
+    <br><br><br><br><br>
+    <br><br><br><br><br>
+    <br><br><br><br><br>
+    <br><br><br><br><br>
+    <br><br><br><br><br>
+    <br><br><br><br><br>
+    <p id="c">3번</p>
+
 </body>
 </html>
