--- a/workspace/work03_UI/1_html/html05_list.html
+++ b/workspace/work03_UI/1_html/html05_list.html
@@ -1,1 +1,92 @@
-d
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>목록 관련 태그들</title>
+</head>
+<body>
+   <h1>순서 없는 내용 태그</h1> 
+   <h3> 수업내용</h3>
+   <ul>
+       <li>Java</li>
+       <li>Oracle</li>
+       <li>JDBC</li>
+       <li>HTML5</li>
+   </ul>
+   <p>ul태그의 기호는 css를 통해 변경 가능하다</p>
+   <br>
+   <h1>순서 있는 내용 태그</h1> 
+   <h3> 수업내용</h3>
+   <ol>
+         <li>Java</li>
+         <li>Oracle</li>
+         <li>JDBC</li>
+         <li>HTML5</li>      
+    </ol>     
+    <p>ol태그의 숫자는 속성을 이용하여 변경이 가능됨<br>
+        기본값은 숫자이며, 1부터 시작한다
+    </p>
+    
+    <br>
+    <h2>속성 변경 연습</h2>
+    <h3>영문 소문자로 표기</h3>
+    <ol type="a">
+        <li>Java</li>
+        <li>Oracle</li>
+        <li>JDBC</li>
+        <li>HTML5</li>      
+   </ol>     
+
+   <h3>영문 대문자로 표기</h3>
+   <ol type="A">
+       <li>Java</li>
+       <li>Oracle</li>
+       <li>JDBC</li>
+       <li>HTML5</li>      
+   </ol>     
+
+   <h3>로마 숫자 소문자로 표기</h3>
+   <ol type="i">
+       <li>Java</li>
+       <li>Oracle</li>
+       <li>JDBC</li>
+       <li>HTML5</li>      
+   </ol>     
+
+   <h3>로마 숫자 대문자로 표기</h3>
+   <ol type="I">
+       <li>Java</li>
+       <li>Oracle</li>
+       <li>JDBC</li>
+       <li>HTML5</li>      
+   </ol>     
+
+   <h3>시작값 변경</h3>
+   <ol start="5">
+       <li>Java</li>
+       <li>Oracle</li>
+       <li>JDBC</li>
+       <li>HTML5</li>      
+   </ol>     
+
+   <h3>역순으로 항목 표시하기</h3>
+   <ol reversed="reversed">
+       <li>Java</li>
+       <li>Oracle</li>
+       <li>JDBC</li>
+       <li>HTML5</li>      
+   </ol>     
+
+   <h1>설명 목록 태그</h1>
+   <dl>
+       <dt>목록의 제목을 적는 곳입니다.</dt>
+       <dd>설명을 작성하는 곳입니다.</dd>
+       <dd>여러 줄을 작성 할 수도 있습니다.</dd>
+       <dd>목록의 제목을 작성하는 곳입니다.</dd>
+       <dd>여러 개 작성해 봅시다.</dd>
+       <dd>새로운 설명을 작성할 수 있습니다</dd>
+   </dl>
+</body>
+</html>
