--- a/workspace/work03_UI/1_html/html08_form02.html
+++ b/workspace/work03_UI/1_html/html08_form02.html
@@ -53,18 +53,80 @@
             홈페이지 : <input type="url" value="http://"><br>
             이메일 : <input type="email"><br>
             전화번호 : <input type="tel"><br>
-
             <br><br>
             <input type="submit" value="전송">
     </form>
+    <hr>
+    <form>
+        <h2>숫자와 관련된 태그들</h2>
+        <h3>type= "number"</h3>
+        <p>입력창에 숫자를 입력하는 것이 기본, 브라우저에 따라 스핀박스가 표현 </p>
+        수량: <input type="number" name="amount" min="0" max="100" value="5" step="5"> 
+                <!--min : 최소값
+                    max : 최대값
+                    step : 디폴트는 1씩 증가지만, step을 쓰면 ~씩 증가한다-->
+        <h3>type="range"</h3>           
+        <p>슬라이드바를 통해 숫자를 지정한다.</p>
+        점수 : <input type="range" min="0" max="100" value="50" step="10">
+   </form>
+   <hr>
+   <form>
+        <h2> 날짜/시간 관련된 태그들</h2>
+        date: <input type="date"><br>
+        month: <input type="month"><br>
+        week: <input type="week"> <br>
+        time: <input type="time"><br>
+        datetime-local : <input type="datetime-local">
+   </form>
+   <hr>
+        <form>
+        <h2>라디오 버튼과 체크박스</h2>
+        성별 : <input type="radio" id= "female" name="gender" value="F" checked><label for="female">여자</label>
+        &nbsp; <input type="radio" id="male" name="gender" value="M"><label for="male">남자</label>
+        <!--label에 for값을 넣으면 꼭 체크박스만 클릭하지 않고도 실행됨!-->
+        <br>
+        취미: 
+        <input type="checkbox" id="baseball" name="hobby" value="baseball" checked><label for="baseball">야구</label>&nbsp;
+        <input type="checkbox" id="basketball" name="hobby" value="basketball"><label for ="basketball ">농구</label>&nbsp;
+        <input type="checkbox" id="football" name="hobby" value="football"><label for="football">축구</label>
+        <br><br>
+        <input type="submit" value="전송">
+       </form>
+    <hr>
+    <form>
+        <h2>그 밖에 태그들</h2>
+        색상 선택 : <input type="color" name="color"><br>
+        파일선택 : <input type="file" name = "upload"><br>
+        안보임 : <input type="hidden" name="hiddenVal" value="1">
+        <br><br>
+        <button type="submit">submit</button>
+       <!--<input type="submit" value="전송">-->
+    </form>
 
+    <hr>
+    <form>
+        <h2>select태그와 option 태그들</h2>
+        <h3>기본</h3>
+        국적:
+        <select>
+            <option value="ko">한국</option>
+            <option value="usa">미국</option>
+            <option>영국</option>
+            <option>기타</option>
+        </select>
+        <h3> select 태그 속성     </h3>
+        <select size="2">
+            <option value="ko">한국</option>
+            <option value="usa">미국</option>
+            <option>영국</option>
+            <option>기타</option>
+        </select>
+    </form>
 
-
-
-
-
-
-
-
+    <hr>
+    <form>
+        <h2>textarea태그</h2>
+        <textarea cols="30" rows="20" style="resize: none;"></textarea>
+    </form>
     </body>
 </html>
