--- a/workspace/work03_UI/2_CSS/css02_selector.html
+++ b/workspace/work03_UI/2_CSS/css02_selector.html
@@ -15,7 +15,25 @@
         <pre>태그 이름을 지정하여 선언한다</pre>
     </article>
 
+    <article>
+        <h3>id 선택자</h3>
+        <ul>
+            <li id="sid01">요소에 id를 지정하고 </li>
+            <li id="sid02">style에서 지정된 id 값을 사용한다</li>
+            <li id="sid03">#으로 구분함</li>
 
+        </ul>
+    </article>
+
+    <article>
+        <h3>class 선택자</h3>
+        <ol>
+            <li id="scls01" class="scls">요소에 class를 지정하고</li>
+            <li class="scls">style에서 지정된 class값을 사용함</li>
+            <li class="scls">.(dot)으로 구분된다.</li>
+
+        </ol>
+    </article>
 
 
 
