--- a/workspace/work03_UI/2_CSS/css02_selector.html
+++ b/workspace/work03_UI/2_CSS/css02_selector.html
@@ -35,8 +35,72 @@
         </ol>
     </article>
 
+    <article>
+        <h3>전체 선택자</h3>
+    </article>
 
+    <article id="at">
+        <h3>자식 선택자</h3>
+        <div>
+            <p>자식1 </p>
+        </div>
+            <p>자식?</p>
+    </article>
 
+    <article>
+        <h3>인접 선택자</h3>
+        <b>지정한 요소 다음</b>
+        <span>에 나오는 요소 선택</span>
+        <b>인접?</b>
+    </article>
+
+    <article>
+        <h3>속성 선택자</h3>
+        <p title="a">속성이 정의된</p>
+        <p title="b">태그만 실행하는</p>
+        <p name="c">하하하하하하</p>
+        <p>선택자</p>
+    </article>
+
+    <article>
+        <h3>가상 클래스 선택자</h3>
+        <ul>
+            <li>특정 이벤트가 발생된 태그</li>
+            <li><a href="http://www.naver.com">네이버</a></li>
+            <li><a href="http://www.google.com">구글</a></li>
+            <li><a href="http://www.daum.net">다음</a></li>
+            <li><input type="checkbox">체크박스!!!</li>
+        </ul>
+    </article>
+
+    <article>
+        <h3 class="acls01">종속 선택자</h3>
+        <ol>
+            <li class="acls01">타입 선택자와 </li>
+            <li class="acls02">id 선택자(#) </li>
+            <li class="acls01">class 선택자(.) </li>
+            <li class="acls02" id="sidli">가 혼합된 형태입니다.</li>
+        </ol>
+    </article>
+
+    <article>
+        <h3>하위 선택자</h3>
+            <!--자식 : 바로 밑!
+                하위 : 본인 이하의 자식, 손자 ...등등을 모두 포함하는 것임-->
+        <div>
+            <span>특정 요소 하위의</span>
+            <p>
+                <span>요소를 지정할 때 사용</span>
+            </p>
+        </div>
+    </article>
+
+    <article>
+        <h3>그룹 선택자</h3>
+        <p>여러 요소에</p>
+        <pre>각각 같은 속성을 </pre>
+        <strong>적용한다.</strong>
+    </article>
 
 
 </body>
