--- a/workspace/work03_UI/2_CSS/css05_paragraph.html
+++ b/workspace/work03_UI/2_CSS/css05_paragraph.html
@@ -9,24 +9,34 @@
 <style type="text/css">
 div{
     text-align: center;
+    /*text-align : 텍스트를 정렬하는 것*/
     text-transform: capitalize;
-    /*capitalize : 글자를 대문자로 만들기~! */
+    /*text-transform : 영어 첫번쨰 글자만 대문자, 대문자, 소문자 지정가능 
+        capitalize : 글자를 대문자로 만들기~! */
     letter-spacing: 10px;
+    /* letter-spacing: 글자 간격 조정 */
     font-size: 30px;
+    /*font-size: 글자 크기 조정 */
+
 }
 p{
     text-indent: 30px;
+    /* 들여 쓰기 : 양수 , 내려쓰기 : 음수*/
+
 }
 
 #one{
-    text-decoration: overline;
-   /*overline : 위쪽에 줄긋기
+    text-decoration: underline;
+   /*텍스트 꾸미는 설정들
+    overline : 위쪽에 줄긋기
      underline : 아래에 줄긋기
      line-through : 취소선긋기*/
 }
 #two
     {
     text-align: right;
+    /*text-align : 텍스트를 정렬하는 것*/
+
     }
 
 </style>
@@ -50,14 +60,16 @@ p{
     <p id = "two">
         19일 완성차 업계에 따르면, 국내 7월 자동차산업 수출금액은 41억달러(4조8300억원)쯤이다. <br>
         2014년 동월 기록한 42.2억달러(4조9600억원)을 제외하면 역대 최고 수출금액으로, 최근 7년 중 최고 실적을 기록했다. <br>
-        2020년 동월과 비교하면 12.3%나 증가했다.<br>
+        2020년 동월과 비교하면 12.3%나 증가했다.
 
         2021년 7월 국내 완성차 수출 금액 성장은 특히 전년 동기 대비 생산대수·수출물량 감소에도 달성한 실적이란 점에서 주목된다.<br>
          국내 완성차 업계는 7월 한달간 전반적인 차량용 반도체 수급 문제로 인한 감산(한국GM 등)과 <br>
          일부 공장의 코로나 확진에 이은 가동중단(기아)·노조 투표 휴무(현대차) 등으로 2일 이상의 조업일수 감소를 겪었다.<br>
         
     </p>
-
-    img src="http://itimg.chosun.com/sitedata/image/202108/19/2021081901846_0.jpg";
+    
+    <p id="three">
+        <img src="http://itimg.chosun.com/sitedata/image/202108/19/2021081901846_0.jpg">
+    </p>
 </body>
 </html>
