--- a/workspace/work03_UI/2_CSS/css02_selector.html
+++ b/workspace/work03_UI/2_CSS/css02_selector.html
@@ -64,18 +64,18 @@
 
     <article>
         <h3>가상 클래스 선택자</h3>
-        <ul>
+        <ol type="I">
             <li>특정 이벤트가 발생된 태그</li>
             <li><a href="http://www.naver.com">네이버</a></li>
             <li><a href="http://www.google.com">구글</a></li>
             <li><a href="http://www.daum.net">다음</a></li>
             <li><input type="checkbox">체크박스!!!</li>
-        </ul>
+        </ol>
     </article>
 
     <article>
-        <h3 class="acls01">종속 선택자</h3>
-        <ol>
+        <h3></h3> >종속 선택자</h3>
+        <ol reversed= reversed>
             <li class="acls01">타입 선택자와 </li>
             <li class="acls02">id 선택자(#) </li>
             <li class="acls01">class 선택자(.) </li>
