--- a/workspace/work03_UI/2_CSS/css07_box.html
+++ b/workspace/work03_UI/2_CSS/css07_box.html
@@ -4,27 +4,44 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>float</title>
+    <title>box모델</title>
 
 <style type="text/css">
-body{
-    width: 300px;
+dt,d1,dd,p{
+        margin: 0px; padding: 0px;
+    }
+.box{
+    width: 600px; border:3px double red;
 }
-img{
-    width: 100px;
-    height: 100px;
+dt{
+    background : steelblue;
+    text-align: center;
+    font-size: 20px;
+    letter-spacing: 15px;
+    padding: 15px;
+    border-bottom: navy 5px double;
 }
-h1{
-    background-color: orangered;
-    float: right;
+dd{
+    padding: 10px;
 }
+.line{
+    border-bottom: red 5px dotted;
+}
+
 </style>
     
 </head>
 <body>
-    <h1> 미 니 언</h1>
-    <p>
-     2등신 몸매에~
-    </p>
+    <d1 class="box">
+        <dt>미니언 명대사</dt>
+            <dd class="line">
+                <h2>케빈</h2>
+                <p>야마 까끼리 뽀쁘르(우리 보스를 위해 싸우자)</p>
+            </dd>
+            <dd>
+                <h2>스튜어트</h2>
+                <p>라빠빠야 로라 퓔리포(피곤하고 춥고 배고프다)</p>
+            </dd>      
+    </d1>
 </body>
 </html>
