--- a/workspace/work03_UI/2_CSS/css09_clear.html
+++ b/workspace/work03_UI/2_CSS/css09_clear.html
@@ -27,6 +27,9 @@
     background-color: pink;
 }
 #w03{
+     /* 원래대로라면 float속성에 의하여 따라가서 배치되어야 함! 
+        clear : left float 속성을 취소한다
+        *both 양쪽 전부 취소 */
     clear: left;
     background-color: purple;
     padding: 10px;
@@ -37,13 +40,18 @@
     <h1>미 니 언 즈</h1>
     <div id="wrapper">
         <div id="w01">
-            등신 몸매와 노란색 피부를 가진 유쾌한 눈깔괴물들이다. 영화 내 개그의 대부분을 책임지는 이들로, 슈퍼배드는 미니언 보는 재미라는 소리까지 나올 정도.
+            등신 몸매와 노란색 피부를 가진 유쾌한 눈깔괴물들이다. 
+            영화 내 개그의 대부분을 책임지는 이들로,
+             슈퍼배드는 미니언 보는 재미라는 소리까지 나올 정도.
         </div>
         <div id="w02">
-            외모는 크게 두 종류인데 외눈박이와 두눈박이이며 두눈박이가 외눈박이보다 개체수가 약간 많다.
+            외모는 크게 두 종류인데 외눈박이와 두눈박이이며 
+            두눈박이가 외눈박이보다 개체수가 약간 많다.
         </div>
         <div id="w03">
-            또한 다른 부분에서의 외모 차이로서 오드아이 미묘한 키 내지는 체형 차이, 그리고 머리카락 외에는 다 똑같이 생겨보이지만 멜, 데이브, 케빈, 칼, 스튜어트, 제리, 랜스, 밥, 톰 등 각각 이름도 있다.
+            또한 다른 부분에서의 외모 차이로서 오드아이 미묘한 키 내지는 체형 차이,
+            그리고 머리카락 외에는 다 똑같이 생겨보이지만
+            멜, 데이브, 케빈, 칼, 스튜어트, 제리, 랜스, 밥, 톰 등 각각 이름도 있다.
         </div>
     </div>
 </body>
