--- a/workspace/work03_UI/2_CSS/css12_posititon.html
+++ b/workspace/work03_UI/2_CSS/css12_posititon.html
@@ -8,27 +8,54 @@
 
 <style type="text/css">
 /*
-static
-relative : 상대위치
-absolute : 절대 위치(지정방식 : )
+static(정적)
+relative : 상대위치, 원래의 위치에서 설정
+absolute : 절대인 위치...화면을 기준삼는다 포지션하는 상위태그에서 설정됨!   
+ (단 상위태그 포지션 설정이 되어있어야함, 없으면 body 기준으로 본다.)
+fixed : 고정위치 ( 스크롤이 움직여도 고정됨 )
 */
     #box{
         width: 550px;
         border: 1px dotted red;
     }
     p{
-        width: 550px;
+        width: 130px;
         height: 100px;
         color : white;
     }
     .myred{
         background-color: red;
+        position: relative;
+        z-index: 2;
+
     }
     .myblue{
         background-color: blue;
+        position: absolute;
+        left: 100px;
+        top: 30px;
+        z-index: 6;
+
     }
     .mygreen{
         background-color: green;
+        position: relative;
+        left: 30px;
+        top: -30px;
+        z-index: 1;
+    }
+    .myred:hover{ z-index: 100;}
+    .myblue:hover{ z-index: 100;}
+    .mygreen:hover{ z-index: 100;}
+
+    /* 가상클래스 , 마우스가 올라오면 */
+    #fixed{
+        width: 100px;
+        height: 300px;
+        background-color: silver;
+        position: fixed;
+        right: 50px;
+        top: 100px;
     }
 </style>
 
@@ -39,9 +66,14 @@ absolute : 절대 위치(지정방식 : )
         <p class="myred">박스의 크기와 위치를 잘 살펴보아야합니다     </p>
         <p class="myblue"> 박스의 포지션 속성을 바꿔가며 테스트 해보아야 합니다     </p>
         <p class="mygreen"> 포지션을 이해하기 위해서는 시험해보고 관찰해보는 것이 필요합니다.    </p>
-        <p>     </p>
     </div>
-    
+    <div id="fixed">
+        fixed!!!!
+    </div>    
+
+    <br><br><br><br><br><br><br><br><br>
+    <br><br><br><br><br><br><br><br>
+    <br><br><br><br><br><br><br><br><br>
 
 </body>
 </html>
