--- a/workspace/work03_UI/2_CSS/css17_menu.html
+++ b/workspace/work03_UI/2_CSS/css17_menu.html
@@ -4,82 +4,94 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-<style type="text/css">
+    <title>nav menu</title>
+    <style type="text/css">
+    *{
+        font-size: 16px;
+    }
+    .navi{
+        list-style-type: none;
+        height: 40px;
+        padding: 0;
+        margin: 0;
+    }
+
     .navi li{
+        float: left;
+        position: relative;
         padding: 0;
         line-height: 40px;
         background-color: brown;
-    }   
+    }
     .navi li a{
-        color: white;
+        color:white;
         font-weight: bold;
         padding: 5px 25px;
         text-decoration: none;
-        }
+    }
+
     .navi li a:hover{
         color: black;
-        }
+    }
     .navi li ul{
-        list-style-type: none;
-        position: absolute;
+        list-style: none;;
+        position:absolute;
         left: 0;
-        width: 200px;
-        background-color: chocolate;
+        width: 180px;
+        background-color: coral;
         padding: 0;
         margin: 0;
-        opacity: 0; 
-        }
+        opacity: 0;
+    }
     .navi li:hover ul{
         opacity: 1;
     }
     .navi li ul li{
         float: none;
         position: static;
-            /*static : 정적 위치!*/
         height: 0;
         line-height: 0;
-        background-color: none; 
+        background-color: none;
     }
     .navi li:hover ul li{
         height: 30px;
         line-height: 30px;
-        padding : 5px 0;
-    }
-    .navi li{
-        transition: all 0.2s;
+        padding: 5px 0;
     }
 
+
+    .navi li {
+        transition: all 0.2s;
+    }
     .navi li a{
         transition: all 0.2s;
     }
     .navi li ul li{
         transition: height 0.5s;
     }
-</style>
-
+    </style>
 </head>
-
 <body>
-    <h2>서브 메뉴가 펼쳐지는 네비게이션</h2>
+    <h2>서브 메뉴가 펼쳐지는 네비게이션 메뉴 만들기</h2>
     <hr>
-    <ul class="navi">
-        <li><a href="#">HOME</a></li>
-        <li><a href="#">웹개발</a></li>
-            <ul>     
-               <li><a href="#">웹디자인</a></li>
-               <li><a href="#">HTML5+CSS3</a></li>
-               <li><a href="#">JQeury</a></li>
-               <li><a href="#">웹</a></li>
-            </ul>
-        <li>
-        <li><a href="#">게시판</a></li>
+    <ui class="navi">
+        <li><a href="#">Home</a></li>
+        <li><a href="#">웹개발</a>
             <ul>
-                <li><a href="#"> Q&A </a></li>
+                <li><a href="#">웹 디자인</a></li>
+                <li><a href="#">HTML5 + css3</a></li>
+                <li><a href="#">J Query</a></li>
+                <li><a href="#">웹</a></li>
+            </ul>
+        </li>
+        <li><a href="#">게시판</a>
+            <ul>
+                <li><a href="#">Q&A</a></li>
                 <li><a href="#">방명록</a></li>
             </ul>
         </li>
         <li><a href="#">프로필</a></li>
-    </ul>
+    </ui>
+    
 </body>
 </html>
