--- a/workspace/work03_UI/4_JQ/jq02_selector01.html
+++ b/workspace/work03_UI/4_JQ/jq02_selector01.html
@@ -9,7 +9,8 @@
 <script type="text/javascript">
     $(document).ready(function(){
         // ':' 필터 셀렉터라고 부름
-        $("div:eq(0)")
+        $("div:eq(0)").css({"border":"1px solid red","width":"400px","height":"200px"});
+        $("#view").cs
     });
 </script>
 </head>
